# rm-compiler

./: README.md  machine.rm  pyproject.toml
src/: emit.py  lex.py  main.py  parse.py  tok.py
