[tool.poetry]
name = "rm-compiler"
version = "0.1.0"
description = ""
authors = ["Tristan Bester <tristanbester@gmail.com>"]
readme = "README.md"
packages = [{include = "rm_compiler"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
